--- a/ui/style.css
+++ b/ui/style.css
@@ -22,7 +22,7 @@ body {
 
 .container{
     max-width:800px;
-    margin: auto;
+    margin: 0 auto;
     color:#4a4a4a;
     font-family:sans-serif;
     padding-top:60px;
